<resources>
    <string name="app_name">Color Converter</string>

    <string name="tv_welcome">Welcome !</string>

    <string name="DL_JSON">Download Advanced Pack 1</string>
    <string name="colorPack">Color Pack</string>
    <string name="downloadToast">Download launched...</string>
    <string name="downloading">Downloading...</string>
    <string name="downloadFinished">Download Finished</string>

    <string name="emptyDB">Empty Database</string>
    <string name="emptyDBmsg">You need to download colors to continue</string>

    <string name="SelectColor">Colors from Database</string>
    <string name="ColorFromPicture">Take a picture</string>

    <string name="HexaFromColor">Hexa from color</string>

    <string name="ColorFromHexa">Color from Hexa</string>
    <string name="enterValidHexa">Please enter valid code</string>


    <string name="apply">Apply</string>

    <string name="HexaFromRGB">Hexa from RGB</string>
    <string name="enterValidRGB">Enter valid RGB values</string>

    <string name="RGBFromHexa">RGB from Hexa</string>

    <string name="Help">Help</string>
    <string name="helpDownload">Click on the pack you want to download in order to launch the download.\nYou must have access to internet.</string>
    <string name="helpColorFromHexa">Enter a hexadecimal code respecting the syntax :\n#ffffff or #FFFFFF.</string>
    <string name="helpHexaFromColor">You can choose between viewing the colors database or shooting a photo.\nYou must have some colors in your database.</string>
    <string name="helpHexaFromColorDB">You can see here all the colors in your database.</string>
    <string name="helpHexaFromRGB">You must enter each color value respecting the syntax : 123.\nr = red, g = green, b = blue.\nYou must write zeros if your rgb value contains some.</string>
    <string name="helpRGBFromHexa">Enter a hexadecimal code respecting the syntax :\n#ffffff or #FFFFFF.\nrgb values will be printed in the corresponding color.</string>
    <string name="helpMain">Select an option.\nYou can have the color from number values (hexadecimal or rgb) or make conversions.</string>

    <string name="Home">Home</string>
</resources>
