<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.esiea.pascolo_wong.programmationmobile.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        android:id="@+id/tv_welcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:onClick="launchHexaFromColor"

        android:text="@string/HexaFromColor"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/hexa_from_color" />

    <Button
        android:onClick="launchColorFromHexa"

        android:text="@string/ColorFromHexa"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hexa_from_color"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/color_from_hexa" />


    <Button
        android:text="@string/HexaFromRGB"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/color_from_hexa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/hexa_from_rgb" />

    <Button
        android:text="@string/RGBFromHexa"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hexa_from_rgb"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/rgb_from_hexa" />

</RelativeLayout>
